# gpti-scrapper

./: .gitignore  clean_and_group_data.py  pyproject.toml  readme.md
src/: settings.py  utils.py
src/spiders/: jumbo.py  lider.py  santaisabel.py
